:bug: Fix spacing in prototype tab empty state

--- a/frontend/src/app/main/ui/viewer/inspect/right_sidebar.scss
+++ b/frontend/src/app/main/ui/viewer/inspect/right_sidebar.scss
@@ -62,7 +62,8 @@
   @include flexColumn;
   align-items: center;
   justify-content: flex-start;
-  gap: $s-8;
+  gap: $s-12;
+  margin-right: $s-8;
 }
 
 .placeholder-icon {
